fix modal z-index bug

--- a/styles/sass/6_components/shared/_modal.scss
+++ b/styles/sass/6_components/shared/_modal.scss
@@ -9,6 +9,7 @@
   align-items: center;
   justify-content: center;
   backdrop-filter: blur(5px);
+  z-index: 9999;
 }
 
 .o-modal__content{
